Fixed bug3 [AB#1, AB#2, AB#3, AB#4]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,18 @@ stages:
                   *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
                     - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
                     - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} <p>Bug Fix</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} <p>Feature</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} <p>Enhancement</p> {{/if} {{/if}} {{/if}}
+                    - **Category** 
+                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
+                            <p>Bug Fix</p> 
+                        {{else}} 
+                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
+                                <p>Feature</p> 
+                            {{else}} 
+                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
+                                    <p>Enhancement</p> 
+                                {{/if}} 
+                            {{/if}} 
+                        {{/if}} 
                     - **ReleaseVersion**
                   {{/if}}  
               {{/forEach}}
@@ -61,7 +72,18 @@ stages:
                   *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
                     - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
                     - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} <p>Bug Fix</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} <p>Feature</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} <p>Enhancement</p> {{/if} {{/if}} {{/if}}
+                    - **Category** 
+                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
+                            <p>Bug Fix</p> 
+                        {{else}} 
+                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
+                                <p>Feature</p> 
+                            {{else}} 
+                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
+                                    <p>Enhancement</p> 
+                                {{/if}} 
+                            {{/if}} 
+                        {{/if}}
                     - **ReleaseVersion**
                   {{/if}}  
               {{/forEach}}
@@ -72,7 +94,18 @@ stages:
                   *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
                     - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
                     - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} <p>Bug Fix</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} <p>Feature</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} <p>Enhancement</p> {{/if} {{/if}} {{/if}}
+                    - **Category** 
+                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
+                            <p>Bug Fix</p> 
+                        {{else}} 
+                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
+                                <p>Feature</p> 
+                            {{else}} 
+                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
+                                    <p>Enhancement</p> 
+                                {{/if}} 
+                            {{/if}} 
+                        {{/if}}
                     - **ReleaseVersion**
                   {{/if}}  
               {{/forEach}}
@@ -83,7 +116,18 @@ stages:
                   *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
                     - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
                     - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} <p>Bug Fix</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} <p>Feature</p> {{else}} {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} <p>Enhancement</p> {{/if} {{/if}} {{/if}}
+                    - **Category** 
+                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
+                            <p>Bug Fix</p> 
+                        {{else}} 
+                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
+                                <p>Feature</p> 
+                            {{else}} 
+                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
+                                    <p>Enhancement</p> 
+                                {{/if}} 
+                            {{/if}} 
+                        {{/if}}
                     - **ReleaseVersion**
                   {{/if}}  
               {{/forEach}}
