--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,94 +42,123 @@ stages:
             templateLocation: 'inline'  # Use an inline template for generating the release notes
             inlinetemplate: |
               ## Build {{buildDetails.buildNumber}}
+              ## Release {{releaseDetails.releaseNumber}}
 
-              # Global list of WIs
+              # Global list of Changes
+              ### Core Changes
+              
               {{#forEach this.workItems}}
-                  {{#if isFirst}}### Core WorkItems {{/if}}
-                  {{#if (contains (lookup this.fields 'System.Tags') 'RN-Core')}}
-                  *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
-                    - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
-                    - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** 
-                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
-                            <p>Bug Fix</p> 
-                        {{else}} 
-                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
-                                <p>Feature</p> 
-                            {{else}} 
-                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
-                                    <p>Enhancement</p> 
-                                {{/if}} 
-                            {{/if}} 
-                        {{/if}} 
-                    - **ReleaseVersion**
-                  {{/if}}  
+                  {{#if isFirst}} #### Features 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}}### Conduit WorkItems {{/if}}
-                  {{#if (contains (lookup this.fields 'System.Tags') 'RN-Conduit')}}
-                  *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
-                    - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
-                    - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** 
-                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
-                            <p>Bug Fix</p> 
-                        {{else}} 
-                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
-                                <p>Feature</p> 
-                            {{else}} 
-                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
-                                    <p>Enhancement</p> 
-                                {{/if}} 
-                            {{/if}} 
-                        {{/if}}
-                    - **ReleaseVersion**
-                  {{/if}}  
+                  {{#if isFirst}} #### Enhancements
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}}### Inigo WorkItems {{/if}}
-                  {{#if (contains (lookup this.fields 'System.Tags') 'RN-Inigo')}}
-                  *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
-                    - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
-                    - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** 
-                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
-                            <p>Bug Fix</p> 
-                        {{else}} 
-                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
-                                <p>Feature</p> 
-                            {{else}} 
-                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
-                                    <p>Enhancement</p> 
-                                {{/if}} 
-                            {{/if}} 
-                        {{/if}}
-                    - **ReleaseVersion**
-                  {{/if}}  
+                  {{#if isFirst}} #### Bug Fixes 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}   
+              {{/forEach}}
+
+              ### Conduit Changes
+              
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Features 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}}### Tamesis WorkItems {{/if}}
-                  {{#if (contains (lookup this.fields 'System.Tags') 'RN-Tamesis')}}
-                  *  **{{this.id}}**  {{lookup this.fields 'System.Title'}}
-                    - **HelpdeskRef** {{lookup this.fields 'Custom.HelpdeskRef'}}
-                    - **Description** {{{lookup this.fields 'System.Description'}}}
-                    - **Category** 
-                        {{#if (contains (lookup this.fields 'System.Tags') 'RN-Bugfix')}} 
-                            <p>Bug Fix</p> 
-                        {{else}} 
-                            {{#if (contains (lookup this.fields 'System.Tags') 'RN-Feature')}} 
-                                <p>Feature</p> 
-                            {{else}} 
-                                {{#if (contains (lookup this.fields 'System.Tags') 'RN-Enhancement')}} 
-                                    <p>Enhancement</p> 
-                                {{/if}} 
-                            {{/if}} 
-                        {{/if}}
-                    - **ReleaseVersion**
-                  {{/if}}  
+                  {{#if isFirst}} #### Enhancements
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
+              {{/forEach}}
+
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Bug Fixes 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}   
+              {{/forEach}}
+
+              ### Conduit Changes
+              
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Features 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
+              {{/forEach}}
+
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Enhancements
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
+              {{/forEach}}
+
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Bug Fixes 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}   
+              {{/forEach}}
+
+              ### Conduit Changes
+              
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Features 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
+              {{/forEach}}
+
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Enhancements
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}
+              {{/forEach}}
+
+              {{#forEach this.workItems}}
+                  {{#if isFirst}} #### Bug Fixes 
+                  {{/if}}
+                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+                  *  **{{lookup this.fields 'System.Title'}}**  
+                            {{lookup this.fields 'System.Description'}}
+                  {{/if}}   
               {{/forEach}}
 
         - publish: $(Build.ArtifactStagingDirectory)/releasenotes.md  # Publish the release notes as an artifact
