--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,120 +45,120 @@ stages:
               ## Release {{releaseDetails.releaseNumber}}
 
               # Global list of Changes
-              ### Core Changes
+              ## Core Changes
               
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Features 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Features 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Enhancements
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Enhancements
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Bug Fixes 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}   
+              {{#if isFirst}} #### Bug Fixes 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}   
               {{/forEach}}
 
-              ### Conduit Changes
+              ## Conduit Changes
               
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Features 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Features 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Enhancements
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Enhancements
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Bug Fixes 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}   
+              {{#if isFirst}} #### Bug Fixes 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}   
               {{/forEach}}
 
-              ### Conduit Changes
+              ## Inigo Changes
               
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Features 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Features 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Enhancements
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Enhancements
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Bug Fixes 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}   
+              {{#if isFirst}} #### Bug Fixes 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}   
               {{/forEach}}
 
-              ### Conduit Changes
+              ## Tamesis Changes
               
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Features 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Features 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Enhancements
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}
+              {{#if isFirst}} #### Enhancements
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}
               {{/forEach}}
 
               {{#forEach this.workItems}}
-                  {{#if isFirst}} #### Bug Fixes 
-                  {{/if}}
-                  {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
-                  *  **{{lookup this.fields 'System.Title'}}**  
-                            {{lookup this.fields 'System.Description'}}
-                  {{/if}}   
+              {{#if isFirst}} #### Bug Fixes 
+              {{/if}}
+              {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
+              *  **{{lookup this.fields 'System.Title'}}**  
+              {{lookup this.fields 'System.Description'}}
+              {{/if}}   
               {{/forEach}}
 
         - publish: $(Build.ArtifactStagingDirectory)/releasenotes.md  # Publish the release notes as an artifact
