Removed <div> from description [AB#1, AB#2, AB#3, AB#4]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -61,7 +61,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -70,7 +70,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Core') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}   
               {{/forEach}}
 
@@ -81,7 +81,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -90,7 +90,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -99,7 +99,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Conduit') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}   
               {{/forEach}}
 
@@ -110,7 +110,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -119,7 +119,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -128,7 +128,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Inigo') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}   
               {{/forEach}}
 
@@ -139,7 +139,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Feature'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -148,7 +148,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Enhancement'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}
               {{/forEach}}
 
@@ -157,7 +157,7 @@ stages:
               {{/if}}
               {{#if (and (contains (lookup this.fields 'System.Tags') 'RN-Tamesis') (contains (lookup this.fields 'System.Tags') 'RN-Bugfix'))}}
               *  **{{lookup this.fields 'System.Title'}}**  
-              {{lookup this.fields 'System.Description'}}
+              {{{lookup this.fields 'System.Description'}}}
               {{/if}}   
               {{/forEach}}
 
